--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   {% block css %}
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
@@ -16,11 +16,33 @@
   {% endblock %}
 
   <style>
+    nav {
+        border-bottom: 1px solid black;
+    }
+
+    .navs ol {
+        list-style-type: none;
+        padding-left: 0;
+    }
+
+    .nav {
+        display: inline-block;
+    }
+
+    .nav a::after {
+        display: inline-block;
+        color: #000;
+        content: '|';
+        font-size: 80%;
+        font-weight: bold;
+        padding: 0 3px;
+    }
     {%block style%}
     {%endblock%}
   </style>
 </head>
 <body>
+{% include "partials/site_head.html" %}
 {% block content %}
 {% endblock %}
 </body>
