feat: change structure

--- a/server/templates/pages/campaigns/edit.html
+++ b/server/templates/pages/campaigns/edit.html
@@ -13,11 +13,11 @@
         <label for="name">Name</label>
         <input type="text" name="name" id="name" value="{{campaign.Name}}">
 
-        <label for="subject_template">Subject Template</label>
-        <textarea name="subject_template" id="subject_template" cols="50" rows="1">{{campaign.Template.Subject}}</textarea>
+        <label for="subject">Subject Template</label>
+        <textarea name="subject" id="subject" cols="50" rows="1">{{campaign.Template.Subject}}</textarea>
 
-        <label for="body_template">Body Template</label>
-        <textarea name="body_template" id="body_template" cols="80" rows="10">{{campaign.Template.Body}}</textarea>
+        <label for="body">Body Template</label>
+        <textarea name="body" id="body" cols="80" rows="10">{{campaign.Template.Body}}</textarea>
 
         <label for="csv">CSV</label>
         <input type="file" name="csv" id="csv" accept=".csv">
