--- a/server/templates/pages/campaigns/new.html
+++ b/server/templates/pages/campaigns/new.html
@@ -10,11 +10,11 @@
         <label for="name">Name</label>
         <input type="text" name="name" id="name">
 
-        <label for="subject_template">Subject Template</label>
-        <textarea name="subject_template" id="subject_template" cols="30" rows="1"></textarea>
+        <label for="subject">Subject Template</label>
+        <textarea name="subject" id="subject" cols="30" rows="1"></textarea>
 
-        <label for="body_template">Body Template</label>
-        <textarea name="body_template" id="body_template" cols="30" rows="10"></textarea>
+        <label for="body">Body Template</label>
+        <textarea name="body" id="body" cols="30" rows="10"></textarea>
 
         <label for="csv">CSV</label>
         <input type="file" name="csv" id="csv" accept=".csv">
