--- a/server/templates/pages/campaigns/show.html
+++ b/server/templates/pages/campaigns/show.html
@@ -9,12 +9,12 @@
 
     <label for="subject">Subject</label>
     <div  style="border: 2px solid gray; border-radius: 4px; margin-top: 8px; margin-bottom: 8px; padding-left: 8px">
-        <pre id="subject">{{ campaign.Template.Subject }}</pre>
+        <pre id="subject">{{ campaign.Subject }}</pre>
     </div>
 
     <label for="body">Body</label>
     <div  style="border: 2px solid gray; border-radius: 4px; margin-top: 8px; margin-bottom: 8px; padding-left: 8px">
-        <pre id="body">{{ campaign.Template.Body }}</pre>
+        <pre id="body">{{ campaign.Body }}</pre>
     </div>
 
     <p>File: <a href="{{ reverse("files-show", campaign.File.FileName)  }}" target="_blank">{{ campaign.File.FileName }}</a></p>
