feat: change editor to use ace editor

--- a/server/templates/pages/campaigns/edit.html
+++ b/server/templates/pages/campaigns/edit.html
@@ -1,5 +1,20 @@
 {% extends "../../base.html" %}
 
+{%block head_script%}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.9.5/ace.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.9.5/mode-html.min.js" type="text/javascript" charset="utf-8"></script>
+{%endblock%}
+
+{%block style%}
+<style>
+    #editor {
+        width: 800px;
+        min-height: 400px;
+        font-size: 16px;
+    }
+</style>
+{%endblock%}
+
 {%block content%}
 
 <main>
@@ -13,18 +28,32 @@
         <label for="name">Name</label>
         <input type="text" name="name" id="name" value="{{campaign.Name}}">
 
-        <label for="subject">Subject Template</label>
-        <textarea name="subject" id="subject" cols="50" rows="1">{{campaign.Template.Subject}}</textarea>
-
-        <label for="body">Body Template</label>
-        <textarea name="body" id="body" cols="80" rows="10">{{campaign.Template.Body}}</textarea>
-
         <label for="csv">CSV</label>
         <input type="file" name="csv" id="csv" accept=".csv">
 
+        <label for="subject">Subject</label>
+        <textarea name="subject" id="subject" cols="50" rows="1">{{campaign.Subject}}</textarea>
+
+        <label for="body">Body</label>
+        <div id="editor">{{campaign.Body}}</div>
+        <input type="hidden" name="body" id="body" value="{{campaign.Body}}"></input>
+
+        <br>
         <input type="submit" value="Save">
     </form>
 </main>
+
+<script>
+    let editor = ace.edit("editor");
+    let HtmlMode = ace.require("ace/mode/html").Mode;
+    editor.session.setMode(new HtmlMode())
+    
+    let htmlBodyEl = document.querySelector("#body")
+    htmlBodyEl.value = editor.getValue()
+    editor.on("change", function(el) {
+        htmlBodyEl.value = editor.getValue()
+    })
+</script>
 
 
 {%endblock%}
