--- a/server/templates/pages/campaigns/show.html
+++ b/server/templates/pages/campaigns/show.html
@@ -1,5 +1,20 @@
 {% extends "../../base.html" %}
 
+{%block head_script%}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.9.5/ace.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.9.5/mode-html.min.js" type="text/javascript" charset="utf-8"></script>
+{%endblock%}
+
+{%block style%}
+<style>
+    #editor {
+        width: 800px;
+        min-height: 100px;
+        font-size: 16px;
+    }
+</style>
+{%endblock%}
+
 {%block content%}
 
 <main>
@@ -13,9 +28,7 @@
     </div>
 
     <label for="body">Body</label>
-    <div  style="border: 2px solid gray; border-radius: 4px; margin-top: 8px; margin-bottom: 8px; padding-left: 8px">
-        <pre id="body">{{ campaign.Body }}</pre>
-    </div>
+    <div id="editor">{{campaign.Body}}</div>
 
     <p>File: <a href="{{ reverse("files-show", campaign.File.FileName)  }}" target="_blank">{{ campaign.File.FileName }}</a></p>
 
@@ -61,5 +74,12 @@
     </div>
     {% endif %}
 </main>
+
+<script>
+    let editor = ace.edit("editor");
+    let HtmlMode = ace.require("ace/mode/html").Mode;
+    editor.session.setMode(new HtmlMode())
+    editor.setReadOnly(true)
+</script>
 
 {%endblock%}
