--- a/server/templates/pages/templates/show.html
+++ b/server/templates/pages/templates/show.html
@@ -19,24 +19,18 @@
 
 <main>
     <h1>Template</h1>
-    <p>ID: {{ template.ID }}</p>
-    <p>Name: {{ template.Name }}</p>
-
-    <label for="subject">Subject</label>
-    <div  style="border: 2px solid gray; border-radius: 4px; margin-top: 8px; margin-bottom: 8px; padding-left: 8px">
-        <pre id="subject">{{ template.Subject }}</pre>
-    </div>
-
-    <label for="body">Body</label>
-    <div id="editor">{{template.Body}}</div>
-
-    <p>File: <a href="{{ reverse("files-show", template.File.FileName)  }}" target="_blank">{{ template.File.FileName }}</a></p>
-
     <a href="{{ reverse("templates-edit", template.ID) }}">
         <button>
             Edit
         </button>
     </a>
+
+    <p>ID: {{ template.ID }}</p>
+    <p>Name: {{ template.Name }}</p>
+
+    <label for="body">Body</label>
+    <div id="editor">{{template.HTML}}</div>
+
 </main>
 
 <script>
