--- a/server/templates/pages/campaigns/show.html
+++ b/server/templates/pages/campaigns/show.html
@@ -19,8 +19,15 @@
 
 <main>
     <h1>Campaign</h1>
+    <a href="{{ reverse("campaigns-edit", campaign.ID) }}">
+        <button>
+            Edit
+        </button>
+    </a>
     <p>ID: {{ campaign.ID }}</p>
     <p>Name: {{ campaign.Name }}</p>
+    <p>File: <a href="{{ reverse("files-show", campaign.File.FileName)  }}" target="_blank">{{ campaign.File.FileName }}</a></p>
+    <p>Template: {{ campaign.Template.Name }}</p>
 
     <label for="subject">Subject</label>
     <div  style="border: 2px solid gray; border-radius: 4px; margin-top: 8px; margin-bottom: 8px; padding-left: 8px">
@@ -29,14 +36,6 @@
 
     <label for="body">Body</label>
     <div id="editor">{{campaign.Body}}</div>
-
-    <p>File: <a href="{{ reverse("files-show", campaign.File.FileName)  }}" target="_blank">{{ campaign.File.FileName }}</a></p>
-
-    <a href="{{ reverse("campaigns-edit", campaign.ID) }}">
-        <button>
-            Edit
-        </button>
-    </a>
 
     <h2>Events</h2>
     <form action="{{ reverse("events-create") }}" method="post">
