--- a/server/templates/pages/campaigns/edit.html
+++ b/server/templates/pages/campaigns/edit.html
@@ -20,7 +20,7 @@
 <main>
     <h1>Edit Campaign</h1>
     <p><b>ID:</b> <i>{{ campaign.ID }}</i></p>
-    <form action="/campaigns/{{ campaign.ID }}/update" method="post" enctype="multipart/form-data">
+    <form action="{{reverse("campaigns-update", campaign.ID)}}" method="post" enctype="multipart/form-data">
         {{ csrfField | safe }}
 
         <input type="hidden" name="id" value="{{ campaign.ID }}">
