--- a/server/templates/pages/campaigns/new.html
+++ b/server/templates/pages/campaigns/new.html
@@ -25,6 +25,21 @@
         <label for="name">Name</label>
         <input type="text" name="name" id="name">
 
+        <label for="csv">CSV</label>
+        <input type="file" name="csv" id="csv" accept=".csv">
+
+        <label for="Template">Template</label>
+        <select name="template_id" id="template">
+            <option value="" style="color:gray; font-style: italic">No Template</option>
+        {% for template in templates %}
+            {% if campaign.Template.ID == template.ID %}
+            <option value="{{template.ID}}" selected>{{template.Name}}</option>
+            {% else %}
+            <option value="{{template.ID}}">{{template.Name}}</option>
+            {% endif %}
+        {% endfor %}
+        </select>
+
         <label for="subject">Subject</label>
         <textarea name="subject" id="subject" cols="30" rows="1"></textarea>
 
@@ -32,8 +47,6 @@
         <div id="editor">{{campaign.Body}}</div>
         <input type="hidden" name="body" id="body" value="{{campaign.Body}}"></input>
 
-        <label for="csv">CSV</label>
-        <input type="file" name="csv" id="csv" accept=".csv">
 
         <br>
         <input type="submit" value="Save">
