fix: fixes edit template heading

--- a/server/templates/pages/templates/edit.html
+++ b/server/templates/pages/templates/edit.html
@@ -19,7 +19,7 @@
 {%endblock%}
 
 <main>
-    <h1>New Template</h1>
+    <h1>Edit Template</h1>
     <form action="{{reverse("templates-update", template.ID)}}" method="post" enctype="multipart/form-data">
         {{ csrfField | safe }}
 
