--- a/server/templates/pages/campaigns/show.html
+++ b/server/templates/pages/campaigns/show.html
@@ -43,6 +43,16 @@
     <label for="body">Body</label>
     <div id="editor">{{campaign.Body}}</div>
 
+    <label for="rendered">Rendered</label>
+    <div style="width: 100%; min-width: 500px; height: 100%">
+        <iframe 
+            id="rendered"
+            src="{{ reverse("render-ondemand", campaign.ID) }}?body={{campaign.Body}}" 
+            frameborder="0"
+            style="width: 100%; height: 100%; min-height: 300px;" 
+        ></iframe>
+    </div>
+
     <h2>Events</h2>
     <form action="{{ reverse("events-create") }}" method="post">
         {{ csrfField | safe }}
