--- a/server/templates/pages/campaigns/new.html
+++ b/server/templates/pages/campaigns/new.html
@@ -29,7 +29,7 @@
         <input type="file" name="csv" id="csv" accept=".csv">
 
         <label for="Template">Template</label>
-        <select name="template_id" id="template">
+        <select name="template_id" id="template" onchange="handleTemplate(this)">
             <option value="" style="color:gray; font-style: italic">No Template</option>
         {% for template in templates %}
             {% if campaign.Template.ID == template.ID %}
@@ -43,10 +43,25 @@
         <label for="subject">Subject</label>
         <textarea name="subject" id="subject" cols="30" rows="1"></textarea>
 
+        <br>
+
         <label for="body">Body</label>
+        <br>
+        <button id="refresh-rendered" type="button">Render</button>
         <div id="editor">{{campaign.Body}}</div>
         <input type="hidden" name="body" id="body" value="{{campaign.Body}}"></input>
 
+        <br>
+
+        <label for="rendered">Rendered</label>
+        <div style="width: 100%; min-width: 500px; height: 100%">
+            <iframe 
+                id="rendered"
+                src="{{ reverse("render-ondemand", campaign.ID) }}?body={{campaign.Body}}&templateID={{campaign.Template.ID}}" 
+                frameborder="0"
+                style="width: 100%; height: 100%; min-height: 300px;" 
+            ></iframe>
+        </div>
 
         <br>
         <input type="submit" value="Save">
@@ -54,6 +69,18 @@
 </main>
 
 <script>
+    // go template
+    const renderOnDemandEndpoint = '{{ reverse("render-ondemand", campaign.ID) }}'
+    const renderedDOM = document.querySelector("#rendered")
+    const refreshRenderedDOM = document.querySelector("#refresh-rendered")
+    const tplDOM = document.querySelector("#template")
+    function handleTemplate(el) {
+        renderedDOM.src = `${renderOnDemandEndpoint}?body=${htmlBodyEl.value}&templateID=${el.value}`
+    }
+    refreshRenderedDOM.addEventListener("click", function() {
+        renderedDOM.src = `${renderOnDemandEndpoint}?body=${htmlBodyEl.value}&templateID=${tplDOM.value}`
+    })
+
     let editor = ace.edit("editor");
     let HtmlMode = ace.require("ace/mode/html").Mode;
     editor.session.setMode(new HtmlMode())
