--- a/server/templates/pages/campaigns/show.html
+++ b/server/templates/pages/campaigns/show.html
@@ -47,7 +47,7 @@
     <div style="width: 100%; min-width: 500px; height: 100%">
         <iframe 
             id="rendered"
-            src="{{ reverse("render-ondemand", campaign.ID) }}?body={{campaign.Body}}" 
+            src="{{ reverse("render-ondemand", campaign.ID) }}?body={{campaign.Body}}&templateID={{campaign.Template.ID}}" 
             frameborder="0"
             style="width: 100%; height: 100%; min-height: 300px;" 
         ></iframe>
